Fixes: - Z-index map - Details edit - Error js Console-log

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -221,6 +221,7 @@ div.details {
         #map {
           width: 100%;
           height: 100%;
+          z-index: 0;
         }
       }
     }
